# Students-Simulator-RPG

./: CMakeLists.txt  Makefile  README.md
Students-Simulator-RPG/: Students-Simulator-RPG.cbp
include/: Character.hpp  Core.hpp  Global.hpp  InGame.hpp  NPC.hpp  Player.hpp  Scene.hpp
src/: Character.cpp  Core.cpp  InGame.cpp  NPC.cpp  Player.cpp  Scene.cpp  main.cpp
